--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "^1.9.7",
+        "@types/socket.io-client": "^3.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.48.2",
         "react-redux": "^8.1.3",
-        "react-router-dom": "^6.19.0"
+        "react-router-dom": "^6.19.0",
+        "socket.io-client": "^4.7.2"
     },
     "devDependencies": {
         "@commitlint/cli": "^18.4.0",
