--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "react-hook-form": "^7.48.2",
         "react-redux": "^8.1.3",
         "react-router-dom": "^6.19.0",
+        "socket.io": "^4.7.2",
         "socket.io-client": "^4.7.2"
     },
     "devDependencies": {
